--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,13 +1,25 @@
+
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+  <div class="container">
+    <h1>Cocktail List</h1>
+    <p>Choose your cocktail.</p>
+  </div>
+</div>
+
+
+
 <h1>Cocktails List</h1>
 
-<div class="btn "> <%= link_to "Add a New One" , new_cocktail_path %> </div>
+
 
 <div class="card" style="width: 18rem;">
-  <% @cocktails.each do |cocktail| %>
+  <% @cocktails.each_with_index do |cocktail, index| %>
     <img src="https://picsum.photos/200" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title"> <%= cocktail.name  %> </h5>
+      <h5 class="card-title"> <%= cocktail.name  %>  </h5>
       <div class="btn "> <%= link_to "Recette" , cocktail_path(cocktail)%>  </div>
     </div>
   <% end %>
 </div>
+
+<div class="btn-add"> <%= link_to "Add a New One" , new_cocktail_path %> </div>
