--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,15 +3,16 @@
 <p>Recipe:</p>
 
 <ul class="list-group">
-  <% @cocktail.doses.each do |dose| %>
-    <li class="list-group-item"> <%= dose.description %> of <%= dose.ingredient.name %> </li>
+  <% @cocktail.doses.each_with_index do |dose, index| %>
+    <li class="list-group-item"> <%= index +1 %>. <%= dose.description %> of <%= dose.ingredient.name %> </li>
   <% end %>
 </ul>
 
 
 <div>
-<%= link_to "add ingredients", new_cocktail_dose_path(@cocktail) %> ** || **
-<%= link_to "Not a good one!", cocktails_path,
-    method: :delete,
-    data: {:confirm => "are you sure ?? " }  %>
+  <%= link_to "add ingredients", new_cocktail_dose_path(@cocktail) %> ** || **
+  <%= link_to "Not a good one!", cocktails_path,
+      method: :delete,
+      data: {:confirm => "are you sure ?? " }  %> ** || **
+  <%= link_to "Back", cocktails_path %>
 </div>
