--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -22,4 +22,6 @@
   <% end %>
 </div>
 
-<div class="btn-add"> <%= link_to "Add a New One" , new_cocktail_path %> </div>
+ <%= link_to "Add a New One" , new_cocktail_path, class:"btn-add"  %>
+
+<a class="btn btn-ghost" href="#">Write a story</a>
