--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -24,4 +24,5 @@
 
  <%= link_to "Add a New One" , new_cocktail_path, class:"btn-add"  %>
 
-<a class="btn btn-ghost" href="#">Write a story</a>
+<%= cl_image_tag("https://res.cloudinary.com/dk85eoleo/image/upload/v1605267576/ombsz57oisqje40pmglv.jpg",
+      width: 400, height: 300, crop: :fill) %>
