--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,10 +1,13 @@
-<h1><%=  @cocktail.name%> </h1>
+<% if @cocktail.photo.attached?  %>
+<%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
+<% end  %>
 
+<h1><%=  @cocktail.name%> </h1>
 <p>Recipe:</p>
 
-<ul class="list-group">
+<ul class="list-group list-group-flush">
   <% @cocktail.doses.each_with_index do |dose, index| %>
-    <li class="list-group-item"> <%= index +1 %>. <%= dose.description %> of <%= dose.ingredient.name %> </li>
+    <li class="list-group-item active"> <%= index +1 %>. <%= dose.description %> of <%= dose.ingredient.name %> </li>
        <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } do %>
        <i class="fa fa-trash destroy_dose"></i>
         <% end %>
@@ -19,5 +22,6 @@
       data: {:confirm => "are you sure ?? " }  %> ** || **
   <%= link_to "Back", cocktails_path %>
 </div>
+
 
 
