ok mister cocktail

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,14 +1,44 @@
 
 .btn-add {
-  color: white;
-  border: 1px solid white;
+  color: black;
+  border: 1px solid black;
   padding: 8px 8px;
   border-radius: 50px;
   font-weight: lighter;
-  opacity: 0.6;
   transition: opacity 0.3s ease;
+  width: 50%;
+  text-align: center;
 }
 
 .btn-add:hover {
   opacity: 1;
+  text-decoration: none;
+  background-color: black;
+  color: white;
+}
+
+.upload-photo {
+  border: 1px solid #d3d3d3;
+  padding: 16px 24px;
+  cursor: pointer;
+  font-weight: 500;
+  background: white;
+  border-radius: 2px;
+}
+
+.btn-new {
+  color: black;
+  border: 1px solid black;
+  padding: 8px 8px;
+  border-radius: 50px;
+  font-weight: lighter;
+  transition: opacity 0.3s ease;
+  text-align: center;
+}
+
+.btn-new:hover {
+  opacity: 1;
+  text-decoration: none;
+  background-color: black;
+  color: white;
 }
